[package]
name = "picas_static_phase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.25"
serde = { version = "1.0.189", features = ["derive"] }
clap = { version = "4.2.4", features = ["derive"] }